package chapter13.prac1;

public interface NavigationFactory {

    GPS createGPS();
    Map createMap();
    Screen createScreen();
    PathFinder createPathFinder();




}
